// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBase.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationClose.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(false)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮(文字)
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义关闭按钮
        </span>
        <div>
          <span>
            x
          </span>
        </div>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    处理开关事件
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    处理定时关闭事件（3s）
  </button>
  <br />
  <br />
  <br />
</DocumentFragment>
`;

exports[`NotificationContent.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容（字符串）
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义内容
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div>
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationFooter.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationIcon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <i
      class="t-icon t-icon-more t-size-m"
    />
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义icon
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationOffset.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    偏移的信息
  </button>
</DocumentFragment>
`;

exports[`NotificationPlacement.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    左上角
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    右上角
  </button>
  <br />
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    左下角
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    右下角
  </button>
</DocumentFragment>
`;

exports[`NotificationSize.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          宽度固定400px
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          文本内容最多支持三行
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条内容为*******************************************************************************
        ***************************************************************************************消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationToggle.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    自由控制关闭时机
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    点击打开多个消息
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    点击关闭多个消息
  </button>
</DocumentFragment>
`;

exports[`NotificationType.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-warning"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-is-success"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-notification"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-error"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationType4Fn.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    信息
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    成功
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    警告
  </button>
  <button
    class="t-button t-button--theme-default t-button--variant-base"
  >
    错误
  </button>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <i
      class="t-icon t-icon-more t-size-m"
    />
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义icon
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification"
  >
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
        <svg
          class="t-icon t-icon-close t-icon-close"
          version="1.1"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M760.9780096 217.6L806.2328448 262.85483392 557.312 511.744 806.2328448 760.6580096 760.9780096 805.9128448 512.064 556.992 263.17483392 805.9128448 217.92 760.6580096 466.816 511.744 217.92 262.85483392 263.17483392 217.6 512.064 466.496 760.9780096 217.6Z"
            fill-opacity=".9"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail--item"
          >
            重启
          </span>
          <span
            class="t-notification__detail--item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
